--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <!-- app.component.html -->
 <header>
-  <!-- Maybe a navbar or title -->
+  <app-navbar></app-navbar>
 </header>
 
 <main>
   <router-outlet></router-outlet>
 </main>
-
