--- a/src/app/components/merit-list/merit-list.component.scss
+++ b/src/app/components/merit-list/merit-list.component.scss
@@ -13,6 +13,12 @@
   padding-bottom: 1rem;
 }
 
+.merit-number {
+  font-weight: bold;
+  width: 24px;
+  text-align: right;
+}
+
 .merit-image {
   width: 120px;
   height: 90px;
