--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-  <a class="logo" routerLink="/">MyMerits</a>
+  <a class="logo" routerLink="/">පිං පොත</a>
 
   <span class="spacer"></span>
 
   <nav class="menu">
     <button mat-button routerLink="/">Home</button>
-    <button mat-button routerLink="/merits/add">Add Merit</button>
+    <button mat-button routerLink="/merits/add">New</button>
+    <button mat-button (click)="logout()">Logout</button>
   </nav>
 </mat-toolbar>
