--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -2,14 +2,21 @@ mat-toolbar {
   display: flex;
   align-items: center;
   padding: 0 1rem;
-   background-color:#eb784a;
+  background-color: #eb784a;
   color: rgb(0, 0, 0);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000; /* ensure it's above other content */
+  /* Optional: add box-shadow or elevation */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
   font-weight: bold;
   font-size: 1.5rem;
-//   color: white;
+  //   color: white;
   text-decoration: none;
 }
 
@@ -20,9 +27,9 @@ mat-toolbar {
 .menu {
   display: flex;
 
-//   button {
-//     color: white;
-//   }
+  //   button {
+  //     color: white;
+  //   }
 }
 
 /* Make toolbar and buttons responsive */
