--- a/src/app/components/merit-form/merit-form.component.scss
+++ b/src/app/components/merit-form/merit-form.component.scss
@@ -5,7 +5,7 @@
   background-color: #fafafa;
   border-radius: 12px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 mat-form-field {
@@ -22,4 +22,72 @@ button-row {
 
 button {
   min-width: 100px;
+}
+
+.image-upload-section {
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.upload-label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.upload-input {
+  display: block;
+  width: 100%;
+  padding: 8px 12px;
+  border: 1px solid #c4c4c4;
+  border-radius: 4px;
+  font-size: 14px;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.upload-input:hover {
+  border-color: #3f51b5;
+}
+
+.image-upload-section {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.image-preview {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.custom-upload-wrapper {
+  margin-top: 1rem;
+  margin-bottom: 5rem;
+}
+
+.custom-upload-button {
+  display: inline-flex;
+  align-items: center;
+  padding: 8px 16px;
+  background-color: #2f2f97;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: background-color 0.2s ease;
+  gap: 8px;
+}
+
+.custom-upload-button:hover {
+  background-color:#6363ec;
+}
+
+.custom-upload-button mat-icon {
+  font-size: 20px;
 }
