--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -4,8 +4,8 @@
   <span class="spacer"></span>
 
   <nav class="menu">
-    <button mat-button routerLink="/">Home</button>
-    <button mat-button routerLink="/merits/add">New</button>
-    <button mat-button (click)="logout()">Logout</button>
+    <button mat-button routerLink="/">මුල් පිටුව</button>
+    <button mat-button routerLink="/merits/add">නව</button>
+    <button mat-button (click)="logout()">පිටවීම</button>
   </nav>
 </mat-toolbar>
