--- a/src/app/components/merit-list/merit-list.component.html
+++ b/src/app/components/merit-list/merit-list.component.html
@@ -6,7 +6,7 @@
 
 <div class="merit-list-container" *ngIf="!loading && !error">
   <div class="filter-row">
-    <div class="total-count">එකතුව : {{ filteredMerits.length }}</div>
+    <section><div class="total-count">එකතුව : {{ filteredMerits.length }}</div></section>
 
     <mat-form-field appearance="fill" class="filter-select">
       <mat-select
