--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -16,7 +16,6 @@ mat-toolbar {
 .logo {
   font-weight: bold;
   font-size: 1.5rem;
-  //   color: white;
   text-decoration: none;
 }
 
@@ -26,10 +25,14 @@ mat-toolbar {
 
 .menu {
   display: flex;
-
-  //   button {
-  //     color: white;
-  //   }
+    button {
+     background-color: #933c10;
+     margin-left: 1%;
+    }
+    button:hover {
+      background-color: #421b07;
+      color: white;
+    }
 }
 
 /* Make toolbar and buttons responsive */
@@ -39,7 +42,8 @@ mat-toolbar {
   }
 
   .menu button {
-    font-size: 0.875rem; /* smaller font */
+    font-size: 0.875rem;
     padding: 0 8px;
+    background-color: #8b2525;
   }
 }
