--- a/src/app/components/merit-list/merit-list.component.html
+++ b/src/app/components/merit-list/merit-list.component.html
@@ -25,7 +25,7 @@
     <img
       class="merit-image"
       [src]="
-        merit.image_urls?.length
+        merit.image_urls.length
           ? merit.image_urls[0]
           : defaultImageUrl
       "
