--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -17,22 +17,22 @@
     <h3>විස්තරය</h3>
     <p class="description">{{ merit?.description }}</p>
   </section>
-    <!-- <iframe [src]="videoUrl" width="640" height="480" allow="autoplay">
-    </iframe> -->
+
   <!-- Video URLs -->
   <section
     *ngIf="merit.video_urls && merit.video_urls.length > 0"
     class="video-list"
   >
     <h3>වීඩියෝ</h3>
-
-    <ul>
-      <li *ngFor="let url of merit.video_urls; let i = index">
-        <a [href]="url" target="_blank" rel="noopener noreferrer">
-          Video {{ i + 1 }}
-        </a>
-      </li>
-    </ul>
+    <div *ngFor="let url of videoUrls" style="margin-bottom: 1rem">
+      <iframe
+        [src]="url"
+        width="640"
+        height="480"
+        allow="autoplay"
+        frameborder="0"
+      ></iframe>
+    </div>
   </section>
 
   <!-- Images -->
