--- a/src/app/components/merit-form/merit-form.component.html
+++ b/src/app/components/merit-form/merit-form.component.html
@@ -47,78 +47,112 @@
     </mat-form-field>
 
     <!-- Video Urls -->
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Video Urls</mat-label>
-      <textarea
-        matInput
-        rows="5"
-        [(ngModel)]="merit.video_urls"
-        name="video_urls"
-      ></textarea>
-    </mat-form-field>
+    <div class="video-url-section">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Add Video URL</mat-label>
+        <input
+          matInput
+          [(ngModel)]="newVideoUrl"
+          name="newVideoUrl"
+          placeholder="Enter one video URL"
+          (keyup.enter)="addVideoUrl()"
+        />
+      </mat-form-field>
 
+      <button
+        mat-raised-button
+        color="primary"
+        type="button"
+        (click)="addVideoUrl()"
+        [disabled]="!newVideoUrl.trim()"
+      >
+        Add URL
+      </button>
+
+      <div *ngIf="videoUrlsArray.length > 0" class="url-list">
+        <mat-list>
+          <mat-list-item *ngFor="let url of videoUrlsArray; let i = index">
+            <a
+              class="vid-url"
+              [href]="url"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Link {{ i + 1 }}</a
+            >
+            <button
+              mat-icon-button
+              color="warn"
+              (click)="removeVideoUrl(i, $event)"
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-list-item>
+        </mat-list>
+      </div>
+    </div>
     <!-- Existing Images (from DB) -->
-    <div *ngIf="existingImages.length > 0">
-      <h4>Existing Images</h4>
-      <div
-        *ngFor="let img of existingImages; let i = index"
-        class="image-upload-section"
-      >
-        <img
-          [src]="img"
-          alt="Existing Image {{ i + 1 }}"
-          class="image-preview"
-        />
-        <button
-          type="button"
-          mat-button
-          color="warn"
-          (click)="removeExistingImageLocally(i)"
+    <div class="image-section">
+      <div *ngIf="existingImages.length > 0">
+        <h4>Existing Images</h4>
+        <div
+          *ngFor="let img of existingImages; let i = index"
+          class="image-upload-section"
         >
-          Remove
-        </button>
+          <img
+            [src]="img"
+            alt="Existing Image {{ i + 1 }}"
+            class="image-preview"
+          />
+          <button
+            type="button"
+            mat-button
+            color="warn"
+            (click)="removeExistingImageLocally(i)"
+          >
+            Remove
+          </button>
+        </div>
+      </div>
+
+      <!-- New Images (not yet uploaded) -->
+      <div *ngIf="selectedFiles.length > 0">
+        <h4>New Images</h4>
+        <div
+          *ngFor="let file of selectedFiles; let i = index"
+          class="image-upload-section"
+        >
+          <img
+            *ngIf="filePreviews[i]"
+            [src]="filePreviews[i]"
+            alt="Preview {{ i + 1 }}"
+            class="image-preview"
+          />
+          <button
+            type="button"
+            mat-button
+            color="warn"
+            (click)="removeNewImageLocally(i)"
+          >
+            Remove
+          </button>
+        </div>
+      </div>
+
+      <!-- Image Upload Button -->
+      <div class="custom-upload-wrapper">
+        <input
+          id="imageUpload"
+          type="file"
+          (change)="onImageSelected($event)"
+          accept="image/*"
+          hidden
+        />
+        <label for="imageUpload" class="custom-upload-button">
+          <mat-icon>add_photo_alternate</mat-icon>
+          Add Image
+        </label>
       </div>
     </div>
-
-    <!-- New Images (not yet uploaded) -->
-    <div *ngIf="selectedFiles.length > 0">
-      <h4>New Images</h4>
-      <div
-        *ngFor="let file of selectedFiles; let i = index"
-        class="image-upload-section"
-      >
-        <img
-          *ngIf="filePreviews[i]"
-          [src]="filePreviews[i]"
-          alt="Preview {{ i + 1 }}"
-          class="image-preview"
-        />
-        <button
-          type="button"
-          mat-button
-          color="warn"
-          (click)="removeNewImageLocally(i)"
-        >
-          Remove
-        </button>
-      </div>
-    </div>
-
-    <!-- Image Upload Button -->
-    <div class="custom-upload-wrapper">
-      <input
-        id="imageUpload"
-        type="file"
-        (change)="onImageSelected($event)"
-        accept="image/*"
-        hidden
-      />
-      <label for="imageUpload" class="custom-upload-button">
-        <mat-icon>add_photo_alternate</mat-icon>
-        Add Image
-      </label>
-    </div>
-
     <!-- Buttons -->
     <div class="button-row">
       <button
