--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -15,7 +15,7 @@
   <!-- Description -->
   <section class="description-section">
     <h3>විස්තරය</h3>
-    <p class="description">{{ merit?.description }}</p>
+    <h3 class="description">{{ merit?.description }}</h3>
   </section>
 
   <!-- Images -->
