--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,9 +29,9 @@
       <button mat-raised-button color="primary" type="button" (click)="login()" [disabled]="loading">
         Login
       </button>
-      <button mat-stroked-button color="accent" type="button" (click)="onCreateUser()" [disabled]="loading">
+      <!-- <button mat-stroked-button color="accent" type="button" (click)="onCreateUser()" [disabled]="loading">
         Create User
-      </button>
+      </button> -->
     </div>
 
     <mat-progress-spinner *ngIf="loading" diameter="30" mode="indeterminate"></mat-progress-spinner>
