--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -15,7 +15,13 @@
   <!-- Description -->
   <section class="description-section">
     <h3>විස්තරය</h3>
-    <h3 class="description">{{ merit?.description }}</h3>
+    <h2 class="description">{{ merit?.description }}</h2>
+  </section>
+
+  <!-- Receiver -->
+  <section class="receiver-section" *ngIf="merit?.receiver">
+    <h3>ප්‍රතිග්‍රාහකයා</h3>
+    <h2 class="receiver">{{ merit?.receiver }}</h2>
   </section>
 
   <!-- Images -->
@@ -23,7 +29,7 @@
     class="images-section"
     *ngIf="merit.image_urls && merit.image_urls.length > 0"
   >
-    <h3>ඡායාරූප</h3>
+    <h3 class="sub-title">ඡායාරූප</h3>
     <app-image-gallery [images]="merit.image_urls"></app-image-gallery>
   </section>
 
@@ -32,7 +38,7 @@
     *ngIf="merit.video_urls && merit.video_urls.length > 0"
     class="video-list"
   >
-    <h3>වීඩියෝ</h3>
+    <h3 class="sub-title">වීඩියෝ</h3>
     <div *ngFor="let url of videoUrls" style="margin-bottom: 1rem">
       <iframe
         [src]="url"
@@ -53,6 +59,7 @@
       aria-label="Back"
     >
       ආපසු
+      <mat-icon>arrow_back</mat-icon>
     </button>
     <ng-container *ngIf="isLoggedIn()">
       <button
@@ -61,7 +68,8 @@
         (click)="onEdit()"
         aria-label="Edit"
       >
-        වෙනස් කිරීම
+        වෙනස් කිරීම්
+        <mat-icon>edit</mat-icon>
       </button>
       <button
         mat-raised-button
@@ -70,6 +78,7 @@
         aria-label="Delete"
       >
         මකන්න
+        <mat-icon>delete</mat-icon>
       </button>
     </ng-container>
   </div>
