--- a/src/app/components/merit-list/merit-list.component.html
+++ b/src/app/components/merit-list/merit-list.component.html
@@ -6,7 +6,9 @@
 
 <div class="merit-list-container" *ngIf="!loading && !error">
   <div class="filter-row">
-    <section><div class="total-count">එකතුව : {{ filteredMerits.length }}</div></section>
+    <section>
+      <div class="total-count">එකතුව : {{ filteredMerits.length }}</div>
+    </section>
 
     <mat-form-field appearance="fill" class="filter-select">
       <mat-select
@@ -15,20 +17,22 @@
         placeholder="සියලුම"
       >
         <mat-option value="">සියලුම</mat-option>
-        <mat-option *ngFor="let t of types" [value]="t.value">{{ t.label }}</mat-option>
+        <mat-option *ngFor="let t of types" [value]="t.value">{{
+          t.label
+        }}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
-  <div class="merit-item" *ngFor="let merit of pagedMerits; let i = index" (click)="viewDetail(merit.id)" >
+  <div
+    class="merit-item"
+    *ngFor="let merit of pagedMerits; let i = index"
+    (click)="viewDetail(merit.id)"
+  >
     <div class="merit-number">{{ pageIndex * pageSize + i + 1 }}</div>
     <img
       class="merit-image"
-      [src]="
-        merit.image_urls.length
-          ? merit.image_urls[0]
-          : defaultImageUrl
-      "
+      [src]="merit.image_urls.length ? merit.image_urls[0] : defaultImageUrl"
       alt="{{ merit.title }}"
     />
     <div class="merit-info">
