--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -83,3 +83,8 @@
     </ng-container>
   </div>
 </div>
+
+<div class="bottom-container">
+  <h2>මෙය දකින්නෝ මේ පින් අනුමෝදන් වෙත්වා!!!</h2>
+  <h2>🪷🪷🪷</h2>
+</div>
