--- a/src/app/components/merit-detail/merit-detail.component.scss
+++ b/src/app/components/merit-detail/merit-detail.component.scss
@@ -9,6 +9,17 @@
   color: #333;
 }
 
+.bottom-container {
+  text-align: center;
+  max-width: 700px;
+  font-weight: bold;
+  margin: 80px auto;
+  padding: 2rem 2.5rem;
+  background-color: #fdfdfd;
+  // border-radius: 12px;
+  // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  color: #731717;
+}
 /* Header Title */
 .header-row {
   margin-bottom: 0.8rem;
