--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -59,7 +59,7 @@
       aria-label="Back"
     >
       ආපසු
-      <mat-icon>arrow_back</mat-icon>
+      <mat-icon class="btn-icon">arrow_back</mat-icon>
     </button>
     <ng-container *ngIf="isLoggedIn()">
       <button
@@ -69,7 +69,7 @@
         aria-label="Edit"
       >
         වෙනස් කිරීම්
-        <mat-icon>edit</mat-icon>
+        <mat-icon class="btn-icon">edit</mat-icon>
       </button>
       <button
         mat-raised-button
@@ -78,7 +78,7 @@
         aria-label="Delete"
       >
         මකන්න
-        <mat-icon>delete</mat-icon>
+        <mat-icon class="btn-icon">delete</mat-icon>
       </button>
     </ng-container>
   </div>
