--- a/src/app/components/merit-detail/merit-detail.component.html
+++ b/src/app/components/merit-detail/merit-detail.component.html
@@ -20,7 +20,7 @@
 
   <!-- Receiver -->
   <section class="receiver-section" *ngIf="merit?.receiver">
-    <h3>ප්‍රතිග්‍රාහකයා</h3>
+    <h3>ප්‍රතිග්‍රාහකයා/සංවිධායකයා</h3>
     <h2 class="receiver">{{ merit?.receiver }}</h2>
   </section>
 
