--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -14,8 +14,9 @@ mat-toolbar {
 }
 
 .logo {
+  color: #1a0202;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.9rem;
   text-decoration: none;
 }
 
