--- a/src/app/components/merit-form/merit-form.component.html
+++ b/src/app/components/merit-form/merit-form.component.html
@@ -136,6 +136,7 @@
             alt="Preview {{ i + 1 }}"
             class="image-preview"
           />
+          <p class="file-name">{{ file.name }}</p>
           <button
             type="button"
             mat-button
