--- a/src/app/components/merit-form/merit-form.component.scss
+++ b/src/app/components/merit-form/merit-form.component.scss
@@ -8,6 +8,9 @@
   font-family: "Roboto", sans-serif;
 }
 
+.file-name{
+  font-size: 12px;
+}
 mat-form-field {
   width: 100%;
   margin-bottom: 1.5rem;
